infra/k8s/comment-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: comment-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comment
          image: tiagorosadacosta123456/blog_comment_service
