infra/k8s/frontend-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: frontend-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: tiagorosadacosta123456/blog_frontend:latest
