infra/k8s/post-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: post-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: tiagorosadacosta123456/blog_post_service
