infra/k8s/queue-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: queue-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: queue
  template:
    metadata:
      labels:
        app: queue
    spec:
      containers:
        - name: queue
          image: redis
