infra/k8s/comment-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  type: NodePort
  selector:
    app: comments 
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
