infra/k8s/frontend-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-srv
spec:
  type: NodePort
  selector:
    app: frontend 
  ports:
    - name: frontend
      protocol: TCP
      port: 3000
      targetPort: 3000
