infra/k8s/query-svr.yml
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  type: NodePort
  selector:
    app: query 
  ports:
    - name: queries
      protocol: TCP
      port: 4002
      targetPort: 4002
