infra/k8s/queue-svr.yml
apiVersion: v1
kind: Service
metadata:
  name: queue-srv
spec:
  selector:
    app: queue 
  ports:
    - name: queue
      protocol: TCP
      port: 6379
      targetPort: 6379
